feat: implementación del módulo de usuarios con componentes y servicios asociados

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -9,8 +9,8 @@
     "Groups": "Grupos",
     "Development Type":"Tipo de Desarrollo",
 
+    "Users": "Usuarios",
     "ModalityModulo": {
         "f":""
     }
 }
-  
