--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,8 +8,10 @@
   "Modality": "Modality",
   "Groups": "Groups",
   "Development Type": "Development Type",
-
+  "Comision academic": "Comision academic",
+  "Management topic": "Management topic",
+  "Management tutor": "Management tutor",
   "ModalityModulo": {
-        "f":""
-    }
+    "f": ""
+  }
 }
