fix: cambios de ultimo momento

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,9 +5,9 @@
   "example": "Example",
   "Choose tema": "Choose Tema",
   "Workshop Registration": "Workshop Registration",
-  "Modality": "Modality",
+  "Subject registration": "Subject registration",
   "See Groups": "See Groups",
-  "Groups": "Groups",
+  "List of registrations": "List of registrations",
   "Comision academic": "Comision Academic",
   "Management topic": "Management Topic",
   "Management tutor": "Management Tutor",
