--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -5,9 +5,9 @@
     "example": "Ejemplo",
     "Choose tema": "Elegir Tema",
     "Workshop Registration": "Registro de Taller",
-    "Modality": "Modalidad",
+    "Subject registration": "Inscripción del tema",
     "See Groups": "Ver Grupos",
-    "Groups": "Grupos",
+    "List of registrations": "Listado de Inscripciones",
     "Comision academic": "Comisión Académica",
     "Management topic": "Gestión de Tema",
     "Management tutor": "Gestión de Tutor",
